[gd_scene load_steps=8 format=2]

[ext_resource path="res://textures/2floor/max's_room.png" type="Texture" id=1]
[ext_resource path="res://scenes/characters/main_character.tscn" type="PackedScene" id=2]
[ext_resource path="res://scripts/2floor/max_room.gd" type="Script" id=3]
[ext_resource path="res://addons/JitterFreePixelArt.shader" type="Shader" id=4]

[sub_resource type="ShaderMaterial" id=1]
shader = ExtResource( 4 )

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 1.36169, 12.2942 )

[sub_resource type="RectangleShape2D" id=3]
extents = Vector2( 8.65424, 3.34428 )

[node name="max_room" type="Node"]
script = ExtResource( 3 )

[node name="ColorRect" type="ColorRect" parent="."]
margin_left = -2385.0
margin_top = -1569.0
margin_right = 2347.0
margin_bottom = 1288.0
color = Color( 0, 0, 0, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Sprite" type="Sprite" parent="."]
material = SubResource( 1 )
position = Vector2( 206.978, 167.464 )
texture = ExtResource( 1 )

[node name="StaticBody2D" type="StaticBody2D" parent="Sprite"]

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="Sprite/StaticBody2D"]
polygon = PoolVector2Array( -99.904, -95.7176, 49.7155, -95.8043, 49.9756, -105.08, 67.9195, -105.34, 67.7461, -95.5443, 105.888, -95.5443, 105.801, 134.607, -100.164, 134.607, -100.077, -27.4091, -105.972, -27.5824, -105.885, -52.4612, -100.164, -52.5479, -99.9908, -100.658, -204.975, 53.7858, -89.9682, 154.473, 202.249, 132.546, 120.356, -112.236, -96.6807, -109.551 )

[node name="player" parent="." instance=ExtResource( 2 )]
position = Vector2( 266.246, 69.1487 )

[node name="hall" type="Area2D" parent="."]
position = Vector2( 115.069, 128.145 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="hall"]
position = Vector2( -10.4051, -0.6689 )
shape = SubResource( 2 )

[node name="game_room" type="Area2D" parent="."]
position = Vector2( 266.128, 83.3243 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="game_room"]
position = Vector2( -0.211823, -14.5448 )
shape = SubResource( 3 )
[connection signal="body_entered" from="hall" to="." method="_on_hall_body_entered"]
[connection signal="body_entered" from="game_room" to="." method="_on_game_room_body_entered"]
